# peft-sparta

./: .gitignore  README.md  pyproject.toml
src/peft-sparta/: metrics.py  sparta_model.py
src/peft_sparta/: __init__.py  metrics.py  sparta.py  sparta_model.py
src/peft_sparta/trainer/: README.md  __init__.py
src/peft_sparta/trainer/sft/: __init__.py  data_processor.py  head_only.py  model_loader.py  optim.py  plots.py  sft.py
training_examples/: classification.ipynb  linear_regression.ipynb  text_generation.ipynb
