[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "peft-sparta"
version = "0.0.4"
description = "SpaRTA adapter invocation code"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.1",
    "transformers>=4.47.0",
]
authors = [
    { name = "Jesus Rios", email = "jriosal@us.ibm.com" },
]
maintainers = [
    { name = "Jesus Rios", email = "jriosal@us.ibm.com" },
]
readme = "README.md"
license = "Apache-2.0" 
license-files = ["LICENSE"]

[project.urls]
Repository = "https://github.com/jmriosal/peft-sparta"
