[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "peft-sparta"
version = "0.0.4"
description = "Invocation code to load and run SpaRTA adapters for inference"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "transformers>=4.47.0",
]
authors = [
    { name = "Jesus Rios", email = "jriosal@us.ibm.com" },
]
maintainers = [
    { name = "Jesus Rios", email = "jriosal@us.ibm.com" },
]
readme = "README.md"
license = "Apache-2.0" 
license-files = ["LICENSE"]

[project.urls]
Repository = "https://github.com/jmriosal/peft-sparta"
